Fixed a problem where my social icons could become way too small and unreadable on very tiny devices

--- a/assets/css/convention.css
+++ b/assets/css/convention.css
@@ -29,7 +29,7 @@ section {
 }
 
 .socials {
-    width: 3vw;
+    width: 3rem;
     height: auto;
     background-color: #DBE8D4;
 }
